--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="container">
+        <h3>Esercizio per casa</h3>
+        <div class="row">
+            <div class="col-xs-1 box">1 col</div>
+            <div class="col-xs-1 box">1 col</div>
+            <div class="col-xs-1 box">1 col</div>
+            <div class="col-xs-1 box">1 col</div>
+            <div class="col-xs-1 box">1 col</div>
+            <div class="col-xs-1 box">1 col</div>
+            <div class="col-xs-1 box">1 col</div>
+            <div class="col-xs-1 box">1 col</div>
+            <div class="col-xs-1 box">1 col</div>
+            <div class="col-xs-1 box">1 col</div>
+            <div class="col-xs-1 box">1 col</div>
+            <div class="col-xs-1 box">1 col</div>
+        </div>
+    </div>
     
 </body>
 </html>
