Aggiunto fino alla quinta riga

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="container">
         <h3>Esercizio per casa</h3>
+        <!-- prima riga  -->
         <div class="row">
             <div class="col-xs-1 box">1 col</div>
             <div class="col-xs-1 box">1 col</div>
@@ -26,7 +27,34 @@
             <div class="col-xs-1 box">1 col</div>
             <div class="col-xs-1 box">1 col</div>
         </div>
+        <!-- seconda riga  -->
+        <div class="row">
+            <div class="col-xs-2 box">col</div>
+            <div class="col-xs-5 box">col</div>
+            <div class="col-xs-5 box">col</div>
+        </div>
+        <!-- terza riga  -->
+        <div class="row">
+            <div class="col-xs-12 box">12 col</div>
+        </div>
+        <!-- quarta riga  -->
+        <div class="row">
+            <div class="col-xs-8 box">8 col</div>
+            <div class="col-xs-2 box">2 col</div>
+            <div class="col-xs-2 box">2 col</div>
+        </div>
+        <!-- quinta riga  -->
+        <div class="row">
+            <div class="col-xs-1 box">1 col</div>
+            <div class="col-xs-2 box">2 col</div>
+            <div class="col-xs-2 box">2 col</div>
+            <div class="col-xs-6 box">6 col</div>
+            <div class="col-xs-1 box">1 col</div>
+        </div>
+
+
+
+
     </div>
-    
 </body>
 </html>
