--- a/index.html
+++ b/index.html
@@ -51,6 +51,22 @@
             <div class="col-xs-6 box">6 col</div>
             <div class="col-xs-1 box">1 col</div>
         </div>
+        <!-- sesta riga annidata  -->
+        <div class="row">
+            <div class="col-xs-6">
+                <div class="row row-padding">
+                    <div class="col-xs-2 nested-box">Nested 2 col</div>
+                    <div class="col-xs-2 nested-box">Nested 2 col</div>
+                    <div class="col-xs-8 nested-box">Nested 8 col</div>
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <div class="row row-padding">
+                    <div class="col-xs-6 nested-box">Nested 6 col</div>
+                    <div class="col-xs-6 nested-box">Nested 6 col</div>
+                </div>
+            </div>
+        </div>
 
 
 
