--- a/index.html
+++ b/index.html
@@ -67,10 +67,35 @@
                 </div>
             </div>
         </div>
-
-
-
-
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 box"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-1 box"></div>
+            <div class="col-xs-11 box"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-2 box"></div>
+            <div class="col-xs-10 box"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-3 box"></div>
+            <div class="col-xs-9 box"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-4 box"></div>
+            <div class="col-xs-8 box"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-5 box"></div>
+            <div class="col-xs-7 box"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6 box"></div>
+            <div class="col-xs-6 box"></div>
+        </div>
     </div>
 </body>
 </html>
