Aggiunta sezione Offset

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- prima sezione  -->
     <div class="container">
         <h3>Esercizio per casa</h3>
         <!-- prima riga  -->
@@ -68,33 +69,100 @@
             </div>
         </div>
     </div>
+    <!-- seconda sezione  -->
     <div class="container">
+        <!-- prima riga  -->
         <div class="row">
             <div class="col-xs-12 box"></div>
         </div>
+        <!-- seconda riga  -->
         <div class="row">
             <div class="col-xs-1 box"></div>
             <div class="col-xs-11 box"></div>
         </div>
+        <!-- terza riga  -->
         <div class="row">
             <div class="col-xs-2 box"></div>
             <div class="col-xs-10 box"></div>
         </div>
+        <!-- quarta riga  -->
         <div class="row">
             <div class="col-xs-3 box"></div>
             <div class="col-xs-9 box"></div>
         </div>
+        <!-- quinta riga  -->
         <div class="row">
             <div class="col-xs-4 box"></div>
             <div class="col-xs-8 box"></div>
         </div>
+        <!-- sesta riga  -->
         <div class="row">
             <div class="col-xs-5 box"></div>
             <div class="col-xs-7 box"></div>
         </div>
+        <!-- settima riga  -->
         <div class="row">
             <div class="col-xs-6 box"></div>
             <div class="col-xs-6 box"></div>
+        </div>
+    </div>
+    <!-- terza sezione Offset  -->
+    <div class="container">
+        <h3>Offset</h3>
+        <!-- prima riga  -->
+        <div class="row">
+            <div class="offset"></div>
+            <div class="col-xs-1"></div>
+        </div>
+        <!-- seconda riga  -->
+        <div class="row">
+            <div class="offset"></div>
+            <div class="col-xs-2"></div>
+        </div>
+        <!-- terza riga  -->
+        <div class="row">
+            <div class="offset"></div>
+            <div class="col-xs-3"></div>
+        </div>
+        <!-- quarta riga  -->
+        <div class="row">
+            <div class="offset"></div>
+            <div class="col-xs-4"></div>
+        </div>
+        <!-- quinta riga  -->
+        <div class="row">
+            <div class="offset"></div>
+            <div class="col-xs-5"></div>
+        </div>
+        <!-- sesta riga  -->
+        <div class="row">
+            <div class="offset"></div>
+            <div class="col-xs-6"></div>
+        </div>
+        <!-- settima riga  -->
+        <div class="row">
+            <div class="offset"></div>
+            <div class="col-xs-7"></div>
+        </div>
+        <!-- ottava riga  -->
+        <div class="row">
+            <div class="offset"></div>
+            <div class="col-xs-8"></div>
+        </div>
+        <!-- nona riga  -->
+        <div class="row">
+            <div class="offset"></div>
+            <div class="col-xs-9"></div>
+        </div>
+        <!-- decima riga  -->
+        <div class="row">
+            <div class="offset"></div>
+            <div class="col-xs-10"></div>
+        </div>
+        <!-- undicesima riga  -->
+        <div class="row">
+            <div class="offset"></div>
+            <div class="col-xs-11"></div>
         </div>
     </div>
 </body>
