--- a/index.html
+++ b/index.html
@@ -165,5 +165,24 @@
             <div class="col-xs-11"></div>
         </div>
     </div>
+    <!-- ultima sezione Nested  -->
+    <div class="container">
+        <h3>Nested</h3>
+        <div class="row">
+            <div class="col-xs-7">
+                <div class="row row-padding">
+                    <div class="col-xs-4 nested-box"></div>
+                    <div class="col-xs-6 nested-box"></div>
+                    <div class="col-xs-4 nested-box"></div>
+                </div>
+            </div>
+            <div class="col-xs-5">
+                <div class="row row-padding">
+                    <div class="col-xs-6 nested-box"></div>
+                    <div class="col-xs-6 nested-box"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
