--- a/index.html
+++ b/index.html
@@ -111,57 +111,57 @@
         <h3>Offset</h3>
         <!-- prima riga  -->
         <div class="row">
-            <div class="offset"></div>
+            <div class="col-offset-11"></div>
             <div class="col-xs-1"></div>
         </div>
         <!-- seconda riga  -->
         <div class="row">
-            <div class="offset"></div>
+            <div class="col-offset-10"></div>
             <div class="col-xs-2"></div>
         </div>
         <!-- terza riga  -->
         <div class="row">
-            <div class="offset"></div>
+            <div class="col-offset-9"></div>
             <div class="col-xs-3"></div>
         </div>
         <!-- quarta riga  -->
         <div class="row">
-            <div class="offset"></div>
+            <div class="col-offset-8"></div>
             <div class="col-xs-4"></div>
         </div>
         <!-- quinta riga  -->
         <div class="row">
-            <div class="offset"></div>
+            <div class="col-offset-7"></div>
             <div class="col-xs-5"></div>
         </div>
         <!-- sesta riga  -->
         <div class="row">
-            <div class="offset"></div>
+            <div class="col-offset-6"></div>
             <div class="col-xs-6"></div>
         </div>
         <!-- settima riga  -->
         <div class="row">
-            <div class="offset"></div>
+            <div class="col-offset-5"></div>
             <div class="col-xs-7"></div>
         </div>
         <!-- ottava riga  -->
         <div class="row">
-            <div class="offset"></div>
+            <div class="col-offset-4"></div>
             <div class="col-xs-8"></div>
         </div>
         <!-- nona riga  -->
         <div class="row">
-            <div class="offset"></div>
+            <div class="col-offset-3"></div>
             <div class="col-xs-9"></div>
         </div>
         <!-- decima riga  -->
         <div class="row">
-            <div class="offset"></div>
+            <div class="col-offset-2"></div>
             <div class="col-xs-10"></div>
         </div>
         <!-- undicesima riga  -->
         <div class="row">
-            <div class="offset"></div>
+            <div class="col-offset-1"></div>
             <div class="col-xs-11"></div>
         </div>
     </div>
