Aggiunto responsive con media queries

--- a/index.html
+++ b/index.html
@@ -15,56 +15,56 @@
         <h3>Esercizio per casa</h3>
         <!-- prima riga  -->
         <div class="row">
-            <div class="col-xs-1 box">1 col</div>
-            <div class="col-xs-1 box">1 col</div>
-            <div class="col-xs-1 box">1 col</div>
-            <div class="col-xs-1 box">1 col</div>
-            <div class="col-xs-1 box">1 col</div>
-            <div class="col-xs-1 box">1 col</div>
-            <div class="col-xs-1 box">1 col</div>
-            <div class="col-xs-1 box">1 col</div>
-            <div class="col-xs-1 box">1 col</div>
-            <div class="col-xs-1 box">1 col</div>
-            <div class="col-xs-1 box">1 col</div>
-            <div class="col-xs-1 box">1 col</div>
+            <div class="col-xs-1 col-md-1 col-lg-1 box">1 col</div>
+            <div class="col-xs-1 col-md-1 col-lg-1 box">1 col</div>
+            <div class="col-xs-1 col-md-1 col-lg-1 box">1 col</div>
+            <div class="col-xs-1 col-md-1 col-lg-1 box">1 col</div>
+            <div class="col-xs-1 col-md-1 col-lg-1 box">1 col</div>
+            <div class="col-xs-1 col-md-1 col-lg-1 box">1 col</div>
+            <div class="col-xs-1 col-md-1 col-lg-1 box">1 col</div>
+            <div class="col-xs-1 col-md-1 col-lg-1 box">1 col</div>
+            <div class="col-xs-1 col-md-1 col-lg-1 box">1 col</div>
+            <div class="col-xs-1 col-md-1 col-lg-1 box">1 col</div>
+            <div class="col-xs-1 col-md-1 col-lg-1 box">1 col</div>
+            <div class="col-xs-1 col-md-1 col-lg-1 box">1 col</div>
         </div>
         <!-- seconda riga  -->
         <div class="row">
-            <div class="col-xs-2 box">col</div>
-            <div class="col-xs-5 box">col</div>
-            <div class="col-xs-5 box">col</div>
+            <div class="col-xs-2 col-md-2 col-lg-2 box">col</div>
+            <div class="col-xs-5 col-md-5 col-lg-5 box">col</div>
+            <div class="col-xs-5 col-md-5 col-lg-5 box">col</div>
         </div>
         <!-- terza riga  -->
         <div class="row">
-            <div class="col-xs-12 box">12 col</div>
+            <div class="col-xs-12 col-md-12 col-lg-12 box">12 col</div>
         </div>
         <!-- quarta riga  -->
         <div class="row">
-            <div class="col-xs-8 box">8 col</div>
-            <div class="col-xs-2 box">2 col</div>
-            <div class="col-xs-2 box">2 col</div>
+            <div class="col-xs-8 col-md-8 col-lg-8 box">8 col</div>
+            <div class="col-xs-2 col-md-2 col-lg-2 box">2 col</div>
+            <div class="col-xs-2 col-md-2 col-lg-2 box">2 col</div>
         </div>
         <!-- quinta riga  -->
         <div class="row">
-            <div class="col-xs-1 box">1 col</div>
-            <div class="col-xs-2 box">2 col</div>
-            <div class="col-xs-2 box">2 col</div>
-            <div class="col-xs-6 box">6 col</div>
-            <div class="col-xs-1 box">1 col</div>
+            <div class="col-xs-1 col-md-1 col-lg-1 box">1 col</div>
+            <div class="col-xs-2 col-md-2 col-lg-2 box">2 col</div>
+            <div class="col-xs-2 col-md-2 col-lg-2 box">2 col</div>
+            <div class="col-xs-6 col-md-6 col-lg-6 box">6 col</div>
+            <div class="col-xs-1 col-md-1 col-lg-1 box">1 col</div>
         </div>
         <!-- sesta riga annidata  -->
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-6 col-md-6 col-lg-6">
                 <div class="row row-padding">
-                    <div class="col-xs-2 nested-box">Nested 2 col</div>
-                    <div class="col-xs-2 nested-box">Nested 2 col</div>
-                    <div class="col-xs-8 nested-box">Nested 8 col</div>
+                    <div class="col-xs-2 col-md-2 col-lg-2 nested-box">Nested 2 col</div>
+                    <div class="col-xs-2 col-md-2 col-lg-2 nested-box">Nested 2 col</div>
+                    <div class="col-xs-8 col-md-8 col-lg-8 nested-box">Nested 8 col</div>
                 </div>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6 col-md-6 col-lg-6">
                 <div class="row row-padding">
-                    <div class="col-xs-6 nested-box">Nested 6 col</div>
-                    <div class="col-xs-6 nested-box">Nested 6 col</div>
+                    <div class="col-xs-6 col-md-6 col-lg-6 nested-box">Nested 6 col</div>
+                    <div class="col-xs-6 col-md-6 col-lg-6 nested-box">Nested 6 col</div>
                 </div>
             </div>
         </div>
@@ -73,37 +73,37 @@
     <div class="container">
         <!-- prima riga  -->
         <div class="row">
-            <div class="col-xs-12 box"></div>
+            <div class="col-xs-12 col-md-12 col-lg-12 box"></div>
         </div>
         <!-- seconda riga  -->
         <div class="row">
-            <div class="col-xs-1 box"></div>
-            <div class="col-xs-11 box"></div>
+            <div class="col-xs-1 col-md-1 col-lg-1 box"></div>
+            <div class="col-xs-11 col-md-11 col-lg-11 box"></div>
         </div>
         <!-- terza riga  -->
         <div class="row">
-            <div class="col-xs-2 box"></div>
-            <div class="col-xs-10 box"></div>
+            <div class="col-xs-2 col-md-2 col-lg-2 box"></div>
+            <div class="col-xs-10 col-md-10 col-lg-10 box"></div>
         </div>
         <!-- quarta riga  -->
         <div class="row">
-            <div class="col-xs-3 box"></div>
-            <div class="col-xs-9 box"></div>
+            <div class="col-xs-3 col-md-3 col-lg-3 box"></div>
+            <div class="col-xs-9 col-md-9 col-lg-9 box"></div>
         </div>
         <!-- quinta riga  -->
         <div class="row">
-            <div class="col-xs-4 box"></div>
-            <div class="col-xs-8 box"></div>
+            <div class="col-xs-4 col-md-4 col-lg-4 box"></div>
+            <div class="col-xs-8 col-md-8 col-lg-8 box"></div>
         </div>
         <!-- sesta riga  -->
         <div class="row">
-            <div class="col-xs-5 box"></div>
-            <div class="col-xs-7 box"></div>
+            <div class="col-xs-5 col-md-5 col-lg-5 box"></div>
+            <div class="col-xs-7 col-md-7 col-lg-7 box"></div>
         </div>
         <!-- settima riga  -->
         <div class="row">
-            <div class="col-xs-6 box"></div>
-            <div class="col-xs-6 box"></div>
+            <div class="col-xs-6 col-md-6 col-lg-6 box"></div>
+            <div class="col-xs-6 col-md-6 col-lg-6 box"></div>
         </div>
     </div>
     <!-- terza sezione Offset  -->
@@ -111,75 +111,75 @@
         <h3>Offset</h3>
         <!-- prima riga  -->
         <div class="row">
-            <div class="col-offset-11"></div>
-            <div class="col-xs-1"></div>
+            <div class="col-xs-offset-11 col-md-offset-11 col-lg-offset-11"></div>
+            <div class="col-xs-1 col-md-11 col-lg-11"></div>
         </div>
         <!-- seconda riga  -->
         <div class="row">
-            <div class="col-offset-10"></div>
-            <div class="col-xs-2"></div>
+            <div class="col-xs-offset-10 col-md-offset-10 col-lg-offset-10"></div>
+            <div class="col-xs-2 col-md-2 col-lg-2"></div>
         </div>
         <!-- terza riga  -->
         <div class="row">
-            <div class="col-offset-9"></div>
-            <div class="col-xs-3"></div>
+            <div class="col-xs-offset-9 col-md-offset-9 col-lg-offset-9"></div>
+            <div class="col-xs-3 col-md-3 col-lg-3"></div>
         </div>
         <!-- quarta riga  -->
         <div class="row">
-            <div class="col-offset-8"></div>
-            <div class="col-xs-4"></div>
+            <div class="col-xs-offset-8 col-md-offset-8 col-lg-offset-8"></div>
+            <div class="col-xs-4 col-md-4 col-lg-4"></div>
         </div>
         <!-- quinta riga  -->
         <div class="row">
-            <div class="col-offset-7"></div>
-            <div class="col-xs-5"></div>
+            <div class="col-xs-offset-7 col-md-offset-7 col-lg-offset-7"></div>
+            <div class="col-xs-5 col-md-5 col-lg-5"></div>
         </div>
         <!-- sesta riga  -->
         <div class="row">
-            <div class="col-offset-6"></div>
-            <div class="col-xs-6"></div>
+            <div class="col-xs-offset-6 col-md-offset-6 col-lg-offset-6"></div>
+            <div class="col-xs-6 col-md-6 col-lg-6"></div>
         </div>
         <!-- settima riga  -->
         <div class="row">
-            <div class="col-offset-5"></div>
-            <div class="col-xs-7"></div>
+            <div class="col-xs-offset-5 col-md-offset-5 col-lg-offset-5"></div>
+            <div class="col-xs-7 col-md-7 col-lg-7"></div>
         </div>
         <!-- ottava riga  -->
         <div class="row">
-            <div class="col-offset-4"></div>
-            <div class="col-xs-8"></div>
+            <div class="col-xs-offset-4 col-md-offset-4 col-lg-offset-4"></div>
+            <div class="col-xs-8 col-md-8 col-lg-8"></div>
         </div>
         <!-- nona riga  -->
         <div class="row">
-            <div class="col-offset-3"></div>
-            <div class="col-xs-9"></div>
+            <div class="col-xs-offset-3 col-md-offset-3 col-lg-offset-3"></div>
+            <div class="col-xs-9 col-md-9 col-lg-9"></div>
         </div>
         <!-- decima riga  -->
         <div class="row">
-            <div class="col-offset-2"></div>
-            <div class="col-xs-10"></div>
+            <div class="col-xs-offset-2 col-md-offset-2 col-lg-offset-2"></div>
+            <div class="col-xs-10 col-md-10 col-lg-10"></div>
         </div>
         <!-- undicesima riga  -->
         <div class="row">
-            <div class="col-offset-1"></div>
-            <div class="col-xs-11"></div>
+            <div class="col-xs-offset-1 col-md-offset-1 col-lg-offset-1"></div>
+            <div class="col-xs-11 col-md-11 col-lg-11"></div>
         </div>
     </div>
     <!-- ultima sezione Nested  -->
     <div class="container">
         <h3>Nested</h3>
         <div class="row">
-            <div class="col-xs-7">
+            <div class="col-xs-7 col-md-7 col-lg-7">
                 <div class="row row-padding">
-                    <div class="col-xs-4 nested-box"></div>
-                    <div class="col-xs-6 nested-box"></div>
-                    <div class="col-xs-4 nested-box"></div>
+                    <div class="col-xs-4 col-md-4 col-lg-4 nested-box"></div>
+                    <div class="col-xs-6 col-md-6 col-lg-6 nested-box"></div>
+                    <div class="col-xs-4 col-md-4 col-lg-4 nested-box"></div>
                 </div>
             </div>
-            <div class="col-xs-5">
+            <div class="col-xs-5 col-md-5 col-lg-5">
                 <div class="row row-padding">
-                    <div class="col-xs-6 nested-box"></div>
-                    <div class="col-xs-6 nested-box"></div>
+                    <div class="col-xs-6 col-md-6 col-lg-6 nested-box"></div>
+                    <div class="col-xs-6 col-md-6 col-lg-6 nested-box"></div>
                 </div>
             </div>
         </div>
