--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
     </div>
     <!-- terza sezione Offset  -->
-    <div class="container">
+    <div class="container offset">
         <h3>Offset</h3>
         <!-- prima riga  -->
         <div class="row">
